Tic Tac Toe completed

--- a/__lecture/tic-tac-toe/index.html
+++ b/__lecture/tic-tac-toe/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./styles.css" />
   <body>
     <div class="players">
-      <p class="player js-player-1">Player 1</p>
+      <p class="player js-player-1 active">Player 1</p>
       <button disabled class="restart">Restart</button>
       <p class="player js-player-2">Player 2</p>
     </div>
